Min height for tags so people can drop. This is more of a stopgap fix, ideally we implement the drag & drop hints for people to indicate where to put things. But this lets them use it at least.

--- a/src/lancer.scss
+++ b/src/lancer.scss
@@ -2183,3 +2183,7 @@ div[data-tab="system"] > .settings-list > div:nth-last-child(-n + 4) {
   pointer-events: none;
   cursor: default;
 }
+
+.compact-tag-row {
+  min-height: 1em;
+}
